Omit a redundant module-readability option for _Ate_
See the module-info.peekaboo declaration.